# tranquil-pds

./: .env.example  .envrc  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  KNOWN_ISSUES.md  LICENSE  README.md  TODO.md  TRANQUIL_OWN_DB_RFC.txt  default.nix  docker-compose.prod.yaml  docker-compose.prod.yml  docker-compose.yaml  example.toml  flake.nix  frontend.nix  justfile  module.nix  nginx.conf  nginx.frontend.conf  nginx.prod.conf  ref_pds_downloader.sh  shell.nix  test.nix  traefik.dev.yaml
crates/tranquil-api/: Cargo.toml
crates/tranquil-api/src/: age_assurance.rs  backup.rs  common.rs  delegation.rs  discord_webhook.rs  lib.rs  notification_prefs.rs  telegram_webhook.rs  temp.rs  verification.rs
crates/tranquil-api/src/actor/: preferences.rs
crates/tranquil-api/src/admin/: config.rs  invite.rs  mod.rs  server_stats.rs  signal.rs  status.rs
crates/tranquil-api/src/identity/: account.rs  did.rs  handle.rs  mod.rs  provision.rs
crates/tranquil-api/src/moderation/: mod.rs
crates/tranquil-api/src/repo/: blob.rs  import.rs  meta.rs
crates/tranquil-api/src/server/: account_status.rs  app_password.rs  email.rs  invite.rs  logo.rs  meta.rs  migration.rs  mod.rs  passkey_account.rs  passkeys.rs  password.rs  reauth.rs  service_auth.rs  session.rs  signing_key.rs  totp.rs  trusted_devices.rs  verify_email.rs  verify_token.rs
crates/tranquil-auth/: Cargo.toml
crates/tranquil-auth/src/: lib.rs  token.rs  totp.rs  types.rs  verify.rs
crates/tranquil-cache/: Cargo.toml
crates/tranquil-cache/src/: lib.rs
crates/tranquil-comms/: Cargo.toml
crates/tranquil-comms/src/: lib.rs  locale.rs  sender.rs  types.rs
crates/tranquil-comms/src/email/: dkim.rs  message.rs  mod.rs  mx.rs  transport.rs  types.rs
crates/tranquil-comms/tests/: email_smtp.rs
crates/tranquil-crypto/: Cargo.toml
crates/tranquil-crypto/src/: encryption.rs  lib.rs  signing.rs
crates/tranquil-db/: Cargo.toml
crates/tranquil-db-traits/: Cargo.toml
crates/tranquil-db-traits/src/: backlink.rs  backup.rs  blob.rs  channel_verification.rs  delegation.rs  error.rs  infra.rs  invite_code.rs  lib.rs  oauth.rs  repo.rs  scope.rs  sequence.rs  session.rs  sso.rs  user.rs
crates/tranquil-db/src/: lib.rs
crates/tranquil-db/src/postgres/: backlink.rs  backup.rs  blob.rs  delegation.rs  event_notifier.rs  infra.rs  mod.rs  oauth.rs  repo.rs  session.rs  sso.rs  user.rs
crates/tranquil-lexicon/: Cargo.toml
crates/tranquil-lexicon/src/: dynamic.rs  formats.rs  lib.rs  registry.rs  resolve.rs  schema.rs  test_schemas.rs  validate.rs
crates/tranquil-lexicon/tests/: resolve_integration.rs
crates/tranquil-oauth/: Cargo.toml
crates/tranquil-oauth-server/: Cargo.toml
crates/tranquil-oauth-server/src/: jwks.rs  lib.rs  sso_endpoints.rs
crates/tranquil-oauth-server/src/endpoints/: authorize.rs  delegation.rs  metadata.rs  par.rs
crates/tranquil-oauth/src/: client.rs  dpop.rs  error.rs  lib.rs  types.rs
crates/tranquil-pds/: Cargo.toml
crates/tranquil-pds/src/: cache_keys.rs  cid_types.rs  circuit_breaker.rs  config.rs  crawlers.rs  did.rs  lib.rs  main.rs  rate_limit.rs  repo_ops.rs  repo_write_lock.rs  scheduled.rs  state.rs  test_new_file.rs  types.rs  util.rs
crates/tranquil-pds/src/api/: age_assurance.rs  backup.rs  delegation.rs  discord_webhook.rs  error.rs  invite.rs  mod.rs  notification_prefs.rs  proxy.rs  proxy_client.rs  responses.rs  telegram_webhook.rs  temp.rs  validation.rs  verification.rs
crates/tranquil-pds/src/appview/: mod.rs
crates/tranquil-pds/src/auth/: account_verified.rs  auth_extractor.rs  email_token.rs  extractor.rs  legacy_2fa.rs  login_identifier.rs  mfa_verified.rs  mod.rs  reauth.rs  scope_check.rs  scope_verified.rs  service.rs  verification_token.rs  webauthn.rs
crates/tranquil-pds/src/cache/: mod.rs
crates/tranquil-pds/src/comms/: mod.rs  service.rs
crates/tranquil-pds/src/delegation/: mod.rs  roles.rs  scopes.rs
crates/tranquil-pds/src/handle/: mod.rs  reserved.rs
crates/tranquil-pds/src/image/: mod.rs
crates/tranquil-pds/src/moderation/: mod.rs
crates/tranquil-pds/src/oauth/: client.rs  mod.rs  verify.rs
crates/tranquil-pds/src/plc/: mod.rs
crates/tranquil-pds/src/rate_limit/: extractor.rs  mod.rs
crates/tranquil-pds/src/repo/: mod.rs
crates/tranquil-pds/src/sso/: config.rs  endpoints.rs  mod.rs  providers.rs
crates/tranquil-pds/src/storage/: mod.rs
crates/tranquil-pds/tests/: account_lifecycle.rs  account_notifications.rs  actor.rs  admin_email.rs  admin_search.rs  admin_stats.rs  apple_sso_unit.rs  auth_extractor.rs  banned_words.rs  commit_signing.rs  delete_account.rs  did_web.rs  dpop_unit.rs  email_update.rs  feed_proxy_aud.rs  firehose_inline_blocks.rs  firehose_validation.rs  gc_after_delete.rs  gc_compaction_restart.rs  handle_domains.rs  identity.rs  image_processing.rs  import_verification.rs  import_with_verification.rs  invite.rs  invite_registration.rs  jwt_security.rs  legacy_2fa.rs  lifecycle_record.rs  lifecycle_session.rs  lifecycle_social.rs  mst_diff_equivalence.rs  mst_firehose_e2e.rs  mst_inductive_firehose.rs  mst_integrity.rs  mst_property_fuzz.rs  notifications.rs  oauth.rs  oauth_lifecycle.rs  oauth_scopes.rs  (+29 more)
crates/tranquil-repo/: Cargo.toml
crates/tranquil-repo/src/: lib.rs
crates/tranquil-ripple/: Cargo.toml
crates/tranquil-ripple/src/: cache.rs  config.rs  engine.rs  eviction.rs  gossip.rs  lib.rs  metrics.rs  rate_limiter.rs  transport.rs
crates/tranquil-ripple/tests/: bind_policy.rs  two_node_convergence.rs
crates/tranquil-scopes/: Cargo.toml
crates/tranquil-scopes/src/: definitions.rs  error.rs  lib.rs  parser.rs  permission_set.rs  permissions.rs
crates/tranquil-server/: Cargo.toml  build.rs
crates/tranquil-server/src/: main.rs
crates/tranquil-signal/: Cargo.toml
crates/tranquil-signal/src/: client.rs  fjall_store.rs  lib.rs  store.rs  tests.rs  tests_fjall.rs
crates/tranquil-storage/: Cargo.toml
crates/tranquil-storage/src/: lib.rs
crates/tranquil-store/fuzz/: Cargo.toml
crates/tranquil-types/: Cargo.toml
crates/tranquil-types/src/: lib.rs
(+1770 files in other folders)
