[package]
name = "tranquil-cache"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tranquil-infra = { workspace = true }

async-trait = { workspace = true }
base64 = { workspace = true }
redis = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
