[package]
name = "tranquil-comms"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tranquil-db-traits = { workspace = true }
uuid = { workspace = true }
