[package]
name = "tranquil-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aes-gcm = { workspace = true }
base64 = { workspace = true }
hkdf = { workspace = true }
hmac = { workspace = true }
p256 = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }
