[package]
name = "tranquil-lexicon"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
resolve = ["dep:reqwest", "dep:hickory-resolver", "dep:tokio", "dep:parking_lot", "dep:tracing", "dep:urlencoding"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
unicode-segmentation = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true, optional = true }
hickory-resolver = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
urlencoding = { workspace = true, optional = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true }
