[package]
name = "tranquil-oauth-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tranquil-pds = { workspace = true }
tranquil-api = { workspace = true }
tranquil-types = { workspace = true }
tranquil-config = { workspace = true }
tranquil-crypto = { workspace = true }
tranquil-db-traits = { workspace = true }

axum = { workspace = true }
base64 = { workspace = true }
bcrypt = { workspace = true }
chrono = { workspace = true }
cid = { workspace = true }
hmac = { workspace = true }
http = { workspace = true }
jacquard-common = { workspace = true }
jacquard-repo = { workspace = true }
k256 = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
urlencoding = { workspace = true }
uuid = { workspace = true }
webauthn-rs = { workspace = true }
