[package]
name = "tranquil-oauth"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tranquil-types = { workspace = true }

anyhow = { workspace = true }
sqlx = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
p256 = { workspace = true }
p384 = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
