[package]
name = "tranquil-scopes"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tranquil-types = { path = "../tranquil-types", default-features = false }
axum = { workspace = true }
futures = { workspace = true }
hickory-resolver = { version = "0.24", features = ["tokio-runtime"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
urlencoding = "2"
