[package]
name = "tranquil-signal"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
presage = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = "2.5"
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rand = "0.9"
