[package]
name = "tranquil-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tranquil-infra = { workspace = true }

async-trait = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
sha2 = { workspace = true }
