[package]
name = "tranquil-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
s3 = ["dep:aws-config", "dep:aws-sdk-s3"]

[dependencies]
tranquil-infra = { workspace = true }

async-trait = { workspace = true }
aws-config = { workspace = true, optional = true }
aws-sdk-s3 = { workspace = true, optional = true }
bytes = { workspace = true }
futures = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
