[package]
name = "tranquil-types"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono = { workspace = true }
cid = { workspace = true }
jacquard-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
