[package]
name = "tranquil-types"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["sqlx"]
sqlx = ["dep:sqlx"]

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true }
cid = { workspace = true }
jacquard-common = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, optional = true }
thiserror = { workspace = true }
uuid = { workspace = true }
